Fixed most warning

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -15,13 +15,14 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="313dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="190dp"
         android:fontFamily="@font/oswald"
         android:text="Change Password"
@@ -41,11 +42,13 @@
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Current Password"
+        android:autofillHints="Current Password"
         android:inputType="textPersonName"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/editTextNewPW"
@@ -58,11 +61,13 @@
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="New Password"
+        android:autofillHints="New Password"
         android:inputType="textPersonName"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/editTextConfirmPW"
@@ -75,11 +80,13 @@
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Confirm New Password"
+        android:autofillHints="Confirm New Password"
         android:inputType="textPersonName"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="RtlSymmetry" />
 
     <Button
         android:id="@+id/changePWButton"
