--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,8 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -33,7 +34,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:background="@drawable/btn_circle"
-            android:src="@drawable/ic_profile" />
+            android:src="@drawable/ic_profile"
+            android:contentDescription="@null"/>
 
     </RelativeLayout>
 
@@ -98,12 +100,11 @@
 
     <TextView
         android:id="@+id/logoutButton"
-        android:layout_width="200dp"
+        android:layout_width="165dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/roboto"
-        android:gravity="center_horizontal"
         android:text="LOGOUT "
         android:textAlignment="viewStart"
         android:textColor="#cc6b49"
@@ -114,7 +115,7 @@
 
     <TextView
         android:id="@+id/deleteAccountButton"
-        android:layout_width="200dp"
+        android:layout_width="165dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="34dp"
@@ -124,7 +125,8 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textProfilePassword" />
+        app:layout_constraintTop_toBottomOf="@+id/textProfilePassword"
+        tools:ignore="UseCompatTextViewDrawableXml" />
 
     <TextView
         android:id="@+id/textView10"
