--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -112,7 +112,8 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <Button
         android:id="@+id/startStopTaskButton"
