--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,7 +18,8 @@
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView25"
-        app:srcCompat="@drawable/dont_slcak8" />
+        app:srcCompat="@drawable/dont_slcak8"
+        android:contentDescription = "@null"/>
 
     <TextView
         android:id="@+id/textView25"
@@ -46,7 +47,8 @@
         android:layout_marginStart="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription = "@string/button"/>
 
     <TextView
         android:id="@+id/textView3"
