--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -12,7 +12,8 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription ="@string/button"/>
 
     <Button
         android:id="@+id/saveEditTaskButton"
@@ -45,6 +46,7 @@
         android:focusable="false"
         android:fontFamily="@font/roboto"
         android:hint="Start Time"
+        android:autofillHints="Start Time"
         android:inputType="datetime"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +66,7 @@
         android:focusable="false"
         android:fontFamily="@font/roboto"
         android:hint="Deadline"
+        android:autofillHints="Deadline"
         android:inputType="datetime"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,11 +84,13 @@
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Title"
+        android:autofillHints="Title"
         android:inputType="textPersonName"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTaskTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/addTaskTitle"/>
+
 
     <EditText
         android:id="@+id/editCurrentTaskDescription"
@@ -98,6 +103,7 @@
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Description"
+        android:autofillHints="Description"
         android:inputType="textPersonName"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
