--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -12,7 +12,8 @@
         android:id="@+id/backHome"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +29,7 @@
             android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:background="@null"
-            android:drawableLeft="@drawable/ic_arrowleft"
+            android:drawableStart="@drawable/ic_arrowleft"
             android:onClick="previousMonthAction"
             android:textColor="#6f5642"
             android:textSize="20sp"
@@ -40,7 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
-            android:capitalize="words"
             android:fontFamily="@font/oswald"
             android:text="FEB 2021"
             android:textAlignment="center"
@@ -53,10 +53,10 @@
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_marginTop="15dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_weight="1"
             android:background="@null"
-            android:drawableRight="@drawable/ic_arrowright"
+            android:drawableEnd="@drawable/ic_arrowright"
             android:onClick="nextMonthAction"
             android:textColor="#6f5642"
             android:textSize="20sp"
@@ -144,19 +144,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calendarRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="210dp" /><![CDATA[
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-
-
-
-
-
-
-
-
-    ]]>
+        android:layout_height="210dp" />
 
     <Button
         android:id="@+id/calendarNewEvent"
@@ -181,7 +169,7 @@
     <ListView
         android:id="@+id/eventListView"
         android:layout_width="match_parent"
-        android:layout_height="293dp"
+        android:layout_height="0dp"
         android:layout_weight="5" />
 
 </LinearLayout>
