--- a/app/src/main/res/layout/activity_note_editor.xml
+++ b/app/src/main/res/layout/activity_note_editor.xml
@@ -12,7 +12,8 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <EditText
         android:id="@+id/editText"
@@ -28,6 +29,7 @@
         android:fontFamily="@font/roboto"
         android:gravity="start|top"
         android:hint="Add your notes..."
+        android:autofillHints="Add your notes..."
         android:inputType="textMultiLine"
         android:padding="20dp"
         android:textColor="@android:color/black"
