--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,7 +22,8 @@
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_informationicon_foreground" />
+            app:srcCompat="@drawable/ic_informationicon_foreground"
+            android:contentDescription="@null"/>
 
         <TextView
             android:id="@+id/textView29"
@@ -40,7 +41,8 @@
             android:layout_height="37dp"
             android:layout_marginStart="320dp"
             android:layout_marginTop="15dp"
-            app:srcCompat="@drawable/ic_arrowright" />
+            app:srcCompat="@drawable/ic_arrowright"
+            android:contentDescription="@string/button"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -61,13 +63,15 @@
             android:layout_height="37dp"
             android:layout_marginStart="320dp"
             android:layout_marginTop="15dp"
-            app:srcCompat="@drawable/ic_arrowright" />
+            app:srcCompat="@drawable/ic_arrowright"
+            android:contentDescription="@string/button"/>
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_notificationbell_foreground" />
+            app:srcCompat="@drawable/ic_notificationbell_foreground"
+            android:contentDescription="@null"/>
 
         <TextView
             android:id="@+id/textView27"
@@ -86,7 +90,8 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <TextView
         android:id="@+id/textView8"
@@ -108,13 +113,14 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
+        android:layout_marginStart="185dp"
         android:layout_marginEnd="185dp"
         android:layout_marginBottom="24dp"
-        android:text="All Rights Reserved "
         android:drawableEnd="@drawable/ic_c"
+        android:text="All Rights Reserved "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="UseCompatTextViewDrawableXml" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
