--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -12,7 +12,8 @@
         android:layout_height="65dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="@string/button"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -66,7 +67,7 @@
 
     <FrameLayout
         android:id="@+id/toDoListFrameLayout"
-        android:layout_width="413dp"
+        android:layout_width="414dp"
         android:layout_height="520dp"
         android:layout_marginTop="5dp"
         android:background="#f1f1f1"
@@ -92,6 +93,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toDoListFrameLayout"
-        app:srcCompat="@drawable/ic_addbutton" />
+        app:srcCompat="@drawable/ic_addbutton"
+        android:contentDescription="@string/button"
+        android:focusable="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
