--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -16,18 +16,19 @@
             android:id="@+id/taskDetailButton"
             android:layout_width="310dp"
             android:layout_height="85dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/btn_bg"
             android:backgroundTint="#e9e0d4"
             android:fontFamily="@font/roboto"
-            android:paddingLeft="20dp"
+            android:paddingStart="20dp"
             android:stateListAnimator="@null"
             android:text="Button"
             android:textAlignment="viewStart"
             android:textColor="#000000"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="RtlSymmetry" />
 
         <ImageView
             android:id="@+id/taskStatusButton"
@@ -36,13 +37,14 @@
             android:layout_marginStart="260dp"
             android:layout_marginTop="8dp"
             android:elevation="6dp"
-            app:srcCompat="@drawable/ic_playarrow_foreground" />
+            app:srcCompat="@drawable/ic_playarrow_foreground"
+            android:contentDescription="@string/button"/>
 
         <TextView
             android:id="@+id/taskDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="69dp"
             android:text="TextView"
             android:textStyle="italic" />
