--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -8,32 +8,76 @@
     tools:context=".ToDoListTaskDetails">
 
     <TextView
+        android:id="@+id/editTaskButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="26dp"
+        android:drawableEnd="@drawable/ic_pencil"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/roboto"
+        android:padding="5dp"
+        android:text="EDIT TASK"
+        android:textColor="#cc6b49"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/taskTimer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deleteTaskButton"
+        tools:ignore="UseCompatTextViewDrawableXml" />
+
+    <TextView
+        android:id="@+id/deleteTaskButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:drawableEnd="@drawable/ic_trash"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/roboto"
+        android:padding="5dp"
+        android:text="DELETE TASK"
+        android:textColor="#cc6b49"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editTaskButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tasktDeadLine"
+        tools:ignore="UseCompatTextViewDrawableXml" />
+
+    <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="150dp"
         android:fontFamily="@font/oswald"
         android:text="My Task "
         android:textColor="#6f5642"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/taskTitle"
-        android:layout_width="167dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="319dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Title"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
+        android:textSize="20sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toTopOf="@+id/textView22"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -41,15 +85,17 @@
         android:id="@+id/taskDiscription"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="124dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="DescriptionDetail"
         android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView23"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,15 +105,17 @@
         android:id="@+id/taskStartTIme"
         android:layout_width="320dp"
         android:layout_height="53dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="164dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Start Time"
         android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,34 +125,20 @@
         android:id="@+id/tasktDeadLine"
         android:layout_width="320dp"
         android:layout_height="53dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Deadline"
         android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/deleteTaskButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskStartTIme" />
-
-    <Button
-        android:id="@+id/editTaskButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="40dp"
-        android:backgroundTint="#cc6b49"
-        android:fontFamily="@font/roboto"
-        android:text="edit"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.852"
-        app:layout_constraintStart_toEndOf="@+id/taskTitle"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/taskDetailBackButton"
@@ -133,8 +167,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#cc6b49"
         android:text="Complete"
-        android:textColor="#cc6b49"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toEndOf="@+id/startStopTaskButton"
         app:layout_constraintTop_toBottomOf="@+id/taskTimer" />
 
@@ -143,27 +178,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="125dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/oswald"
         android:padding="10dp"
         android:text="00 : 00 : 00"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tasktDeadLine" />
+        app:layout_constraintTop_toBottomOf="@+id/editTaskButton" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="27dp"
         android:fontFamily="@font/roboto"
         android:text="Title "
         android:textColor="#6F5643"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/taskTitle"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskDetailBackButton" />
 
     <TextView
         android:id="@+id/textView22"
