--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -7,24 +7,6 @@
     tools:context=".ToDOListEditTaskDetails">
 
     <TextView
-        android:id="@+id/deleteTaskButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="32dp"
-        android:drawableEnd="@drawable/ic_trash"
-        android:drawablePadding="5dp"
-        android:fontFamily="@font/roboto"
-        android:padding="5dp"
-        android:text="DELETE TASK"
-        android:textColor="#cc6b49"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDeadline"
-        tools:ignore="UseCompatTextViewDrawableXml" />
-
-    <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,7 +36,7 @@
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#CC6B49"
         android:drawableEnd="@drawable/ic_addbutton"
@@ -118,16 +100,16 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="44dp"
+        android:autofillHints="Title"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Title"
-        android:autofillHints="Title"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
