--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -15,7 +15,7 @@
         <Button
             android:id="@+id/taskDetailButton"
             android:layout_width="310dp"
-            android:layout_height="85dp"
+            android:layout_height="90dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/btn_bg"
@@ -23,7 +23,6 @@
             android:fontFamily="@font/roboto"
             android:paddingStart="20dp"
             android:stateListAnimator="@null"
-            android:text="Button"
             android:textAlignment="viewStart"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -36,18 +35,30 @@
             android:layout_height="88dp"
             android:layout_marginStart="260dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/button"
             android:elevation="6dp"
-            app:srcCompat="@drawable/ic_playarrow_foreground"
-            android:contentDescription="@string/button"/>
+            app:srcCompat="@drawable/ic_playarrow_foreground" />
 
         <TextView
             android:id="@+id/taskDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="69dp"
+            android:layout_marginTop="50dp"
             android:text="TextView"
             android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/taskName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="25dp"
+            android:fontFamily="@font/roboto"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 </LinearLayout>
