Data display optimization 1) Description edit text in Add task and task detail edit will now able to be displayed in multiline. 2) Task detail will now display the title fully. 3) Task detail complete button background colour will now be consistent but button text colour will be set to dark grey upon task finish. 4) Enable scroll view in add task, view and edit task detail.

--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -1,188 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ToDOListEditTaskDetails">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="144dp"
-        android:fontFamily="@font/oswald"
-        android:text="Edit Task "
-        android:textColor="#6f5642"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context=".ToDOListEditTaskDetails">
 
-    <ImageView
-        android:id="@+id/editDetailBackButton"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back"
-        android:contentDescription="@string/button"/>
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="144dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="144dp"
+            android:fontFamily="@font/oswald"
+            android:text="Edit Task "
+            android:textColor="#6f5642"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/saveEditTaskButton"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/btn_circle"
-        android:backgroundTint="#CC6B49"
-        android:drawableEnd="@drawable/ic_addbutton"
-        android:fontFamily="@font/roboto"
-        android:padding="15dp"
-        android:text="Save"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDeadline" />
+        <ImageView
+            android:id="@+id/editDetailBackButton"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_back"
+            android:contentDescription="@string/button"/>
 
-    <EditText
-        android:id="@+id/editCurrentTaskStartTime"
-        android:layout_width="320dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="44dp"
-        android:background="@drawable/custom_input"
-        android:drawableEnd="@drawable/ic_time"
-        android:ems="10"
-        android:focusable="false"
-        android:fontFamily="@font/roboto"
-        android:hint="Start Time"
-        android:autofillHints="Start Time"
-        android:inputType="datetime"
-        android:padding="10dp"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDescription" />
+        <Button
+            android:id="@+id/saveEditTaskButton"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="104dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="104dp"
+            android:background="@drawable/btn_circle"
+            android:backgroundTint="#CC6B49"
+            android:drawableEnd="@drawable/ic_addbutton"
+            android:fontFamily="@font/roboto"
+            android:padding="15dp"
+            android:text="Save"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDeadline" />
 
-    <EditText
-        android:id="@+id/editCurrentTaskDeadline"
-        android:layout_width="320dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="44dp"
-        android:background="@drawable/custom_input"
-        android:drawableEnd="@drawable/ic_deadline"
-        android:ems="10"
-        android:focusable="false"
-        android:fontFamily="@font/roboto"
-        android:hint="Deadline"
-        android:autofillHints="Deadline"
-        android:inputType="datetime"
-        android:padding="10dp"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskStartTime" />
+        <EditText
+            android:id="@+id/editCurrentTaskStartTime"
+            android:layout_width="320dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="44dp"
+            android:autofillHints="Start Time"
+            android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_time"
+            android:ems="10"
+            android:focusable="false"
+            android:fontFamily="@font/roboto"
+            android:hint="Start Time"
+            android:inputType="datetime"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDescription" />
 
-    <EditText
-        android:id="@+id/editCurrentTaskTitle"
-        android:layout_width="320dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="44dp"
-        android:autofillHints="Title"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:fontFamily="@font/roboto"
-        android:hint="Title"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        <EditText
+            android:id="@+id/editCurrentTaskDeadline"
+            android:layout_width="320dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="44dp"
+            android:autofillHints="Deadline"
+            android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_deadline"
+            android:ems="10"
+            android:focusable="false"
+            android:fontFamily="@font/roboto"
+            android:hint="Deadline"
+            android:inputType="datetime"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskStartTime" />
 
-    <EditText
-        android:id="@+id/editCurrentTaskDescription"
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="44dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:fontFamily="@font/roboto"
-        android:hint="Description"
-        android:autofillHints="Description"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskTitle" />
+        <EditText
+            android:id="@+id/editCurrentTaskTitle"
+            android:layout_width="320dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="44dp"
+            android:autofillHints="Title"
+            android:background="@drawable/custom_input"
+            android:ems="10"
+            android:fontFamily="@font/roboto"
+            android:hint="Title"
+            android:inputType="textLongMessage"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.333"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-    <TextView
-        android:id="@+id/textView31"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:fontFamily="@font/roboto"
-        android:text="Title"
-        android:textColor="#6f5643"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskTitle"
-        app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:id="@+id/editCurrentTaskDescription"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="44dp"
+            android:autofillHints="Description"
+            android:background="@drawable/custom_input"
+            android:ems="10"
+            android:fontFamily="@font/roboto"
+            android:hint="Description"
+            android:inputType="textMultiLine"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskTitle" />
 
-    <TextView
-        android:id="@+id/textView32"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:fontFamily="@font/roboto"
-        android:text="Description"
-        android:textColor="#6f5643"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskDescription"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:fontFamily="@font/roboto"
+            android:text="Title"
+            android:textColor="#6f5643"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskTitle"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:text="Start Time"
-        android:textColor="#6f5643"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskStartTime"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView32"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:fontFamily="@font/roboto"
+            android:text="Description"
+            android:textColor="#6f5643"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskDescription"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView34"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:text="Deadline"
-        android:textColor="#6f5643"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskDeadline"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView33"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:text="Start Time"
+            android:textColor="#6f5643"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskStartTime"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/textView34"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:text="Deadline"
+            android:textColor="#6f5643"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskDeadline"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
