--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,25 +41,25 @@
 
     <TextView
         android:id="@+id/changePassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="95dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="88dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="93dp"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="CHANGE"
-        android:textColor="#128AE6"
+        android:textColor="#cc6b49"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textProfilePassword"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
     <TextView
         android:id="@+id/textProfilePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="37dp"
         android:fontFamily="@font/roboto"
         android:text="**********"
         android:textColor="#000000"
@@ -72,7 +72,7 @@
         android:id="@+id/textProfileUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/roboto"
         android:text="Username"
@@ -103,7 +103,7 @@
         android:layout_width="165dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="34dp"
         android:fontFamily="@font/roboto"
         android:text="LOGOUT "
         android:textAlignment="viewStart"
@@ -119,7 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="34dp"
-        android:drawableEnd="@drawable/ic_trash"
+        android:fontFamily="@font/roboto"
         android:text="DELETE ACCOUNT"
         android:textColor="#cc6b49"
         android:textSize="16sp"
@@ -134,6 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/roboto"
         android:text="Username:"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -146,6 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="34dp"
+        android:fontFamily="@font/roboto"
         android:text="Password:"
         android:textSize="20sp"
         android:textStyle="bold"
